--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,12 @@ before_install:
     - docker build -t invanda/docker-swagger-api -f ./backend/Dockerfile.dev ./backend
 
 script:
-  - docker run -e CI=true invanda/docker-swagger-api npm run dev
+  - docker run -e CI=true invanda/docker-swagger-api npm run test
 
 after_success:
     - docker build -t invanda/docker-backend ./backend
     - echo "$DOCKER_HUB_PASSWORD" | docker login -u "$DOCKER_HUB_ID" --password-stdin
-    - docker push smileajw1004/docker-backend
+    - docker push invanda/docker-backend
     - echo "Test Success!"
 
 
