--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
     - docker build -t invanda/docker-swagger-api -f ./backend/Dockerfile.dev ./backend
 
 script:
-  - docker run -e CI=true invanda/docker-swagger-api npm run test
+  - docker run -e CI=true invanda/docker-swagger-api npm run test -- --coverage
 
 after_success:
     - docker build -t invanda/docker-backend ./backend
