--- a/backend/package.json
+++ b/backend/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "exit",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
     "express":"4.17.1",
-    "mysql":"2.18.1",
-    "nodemon":"2.0.4"
+    "nodemon":"2.0.4",
+    "mocha":"8.2.1"
   },
   "author": "",
   "license": "ISC"
