dockerrun.aws.join add

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,11 @@ before_install:
 script:
   - docker run -e CI=true invanda/docker-swagger-api npm run test
 
-# after_success:
-#     - docker build -t invanda/docker-backend ./backend
-#     - echo "$DOCKER_HUB_PASSWORD" | docker login -u "$DOCKER_HUB_ID" --password-stdin
-#     - docker push invanda/docker-backend
-#     - echo "Test Success!"
+after_success:
+    - docker build -t invanda/docker-backend ./backend
+    - echo "$DOCKER_HUB_PASSWORD" | docker login -u "$DOCKER_HUB_ID" --password-stdin
+    - docker push invanda/docker-backend
+    - echo "Test Success!"
 
 
 deploy:
