--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,12 @@
 version: "3"
 services:
+  nginx: 
+    restart: always
+    build:
+      dockerfile: Dockerfile
+      context: ./nginx
+    ports: 
+      - "80:80"
   backend:
     build: 
       dockerfile: Dockerfile
@@ -8,6 +15,7 @@ services:
     volumes:
       - /app/node_modules
       - ./backend:/app
-    ports:  
+    ports: 
       - "5000:5000"
+
     
