--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "express":"4.17.1",
     "nodemon":"2.0.4",
-    "mocha":"8.2.1"
+    "mocha":"8.2.1",
+    "cors":"2.8.5"
   },
   "author": "",
   "license": "ISC"
