--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
     - docker build -t invanda/docker-swagger-api -f ./frontend/Dockerfile.dev ./frontend
 
 script:
-    - docker run -e CI=true invanda/react-test-app npm test
+    - docker run -e CI=true invanda/docker-swagger-api npm test
     
 after_success:
     - docker build -t invanda/docker-frontend ./frontend
